--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native-svg": "^12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.1.1",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
     "rn-range-slider": "^2.1.1",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5"
